Build a local Ghostscript

--- a/conf/systemd-scheduler.service
+++ b/conf/systemd-scheduler.service
@@ -6,8 +6,9 @@ Requires=redis.service
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__INSTALL_DIR__/src/
-ExecStart=__INSTALL_DIR__/venv/bin/celery --app paperless beat --loglevel INFO
+WorkingDirectory=__INSTALL_DIR__/main/src/
+Environment=PATH=__INSTALL_DIR__/gs/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ExecStart=__INSTALL_DIR__/main/venv/bin/celery --app paperless beat --loglevel INFO
 StandardOutput=append:/var/log/__APP__/__APP__-scheduler.log
 StandardError=inherit
 
