--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,8 +8,9 @@ Requires=redis.service
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__INSTALL_DIR__/src/
-ExecStart=__INSTALL_DIR__/venv/bin/uvicorn --port=__PORT__ --log-level=warning paperless.asgi:application
+WorkingDirectory=__INSTALL_DIR__/main/src/
+Environment=PATH=__INSTALL_DIR__/gs/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ExecStart=__INSTALL_DIR__/main/venv/bin/uvicorn --port=__PORT__ --log-level=warning paperless.asgi:application
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
 
